--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -311,8 +311,11 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
   }
 }
 
-.past-date h2 {
-  color: @color-text-downplayed;
+.past-date {
+  h2,
+  &.reminder--date {
+    color: @color-text-downplayed;
+  }
 }
 
 /*
@@ -769,43 +772,54 @@ TODO: Example needed
   }
 }
 
-// 1. Center widget inside container.
-// 2. This is the minimun height the widget will use.
+@size-font-reminder: @size-font-content;
+
+// 1. This is the minimun height the widget will use.
 .reminder-container {
-  text-align: center; // [1]
-  height: 102px;  // [2]
+  height: 112px;  // [1]
+  font-size: @size-font-reminder;
 }
 
-// 1. Nudge hour input right and minute input left, so it looks more like 09:00 and not 09 : 00
-// 2. Align hour input right and minute input left.
-// 3. Align .reminder--up and .reminder--down horizontally with .remider--time
-.reminder-wrapper {
-  width: @grid-horizontal * 1.5;
+// 1. Center text.
+// 2. inline-block has some whitespace issues, use block instead
+//    http://stackoverflow.com/questions/2628050/ignore-whitespace-in-html
+.reminder--date-wrapper {
+  display: inline-block;
+  text-align: center; // [1]
+  &:nth-child(4) {
+    min-width: 64px;
+  }
+  &:nth-child(5) {
+    min-width: 36px;
+  }
+  &> * {
+    display: block; // [1]
+  }
+}
+
+// 1. Align .reminder--up and .reminder--down horizontally with .remider--time and add padding
+// 2. Pad rigth .reminder--time-wrapper by the width of self.
+// 3. Clear.
+.reminder--time-wrapper {
+  width: 21px;
   display: inline-block;
   &> * {
-    display: inline-block;
-    width: 100%;
+    display: block;
   }
-  &:first-child {
-    text-align: right;  // [2]
-    margin-right: -5px; // [1]
+  > .reminder--up,
+  > .reminder--down {
+      margin-left: -@grid-horizontal / 2; // [1]
+      padding-left: 20px;                 // [1]
+      margin-right: -7px;                 // [1]
+  }
+  &~ .reminder--time-wrapper {
+    margin-right: 21px;  // [2]
     > .reminder--up,
     > .reminder--down {
-      padding-right: 16px;  // [3]
-    }
-    > .reminder--time {
-      text-align: right;  // [2]
-    }
-  }
-  &:last-child {
-    text-align: left; // [2]
-    margin-left: -5px;  // [1]
-    > .reminder--up,
-    > .reminder--down {
-      padding-left: 16px; // [3]
-    }
-    > .reminder--time {
-      text-align: left; // [2]
+      margin-right: 0;  // [3]
+      padding-left: @grid-horizontal / 2; // [1]
+      padding-right: 30px;                // [1]
+      margin-left: -7px;                  // [1]
     }
   }
 }
@@ -813,28 +827,29 @@ TODO: Example needed
 // 1. Adjust height
 .reminder--up,
 .reminder--down {
-  height: @grid-vertical-medium;      // [1]
-  line-height: @grid-vertical-medium; // [1]
+  height: @grid-vertical;      // [1]
+  line-height: @grid-vertical; // [1]
 }
 
 // 1. Turn Off Number Input Spinners
 //    https://css-tricks.com/snippets/css/turn-off-number-input-spinners/
 .reminder--time {
-  font-size: @size-font-medium-large;
   &::-webkit-inner-spin-button,
   &::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+    -webkit-appearance: none; // [1]
+    margin: 0;                // [1]
+  }
+  &.ng-invalid {
+    color: @color-text-error;
   }
 }
 
 // 1. Align vertically with padding-top and padding-bottom:
-//    30 * 2 + .reminder--separator_HEIGHT = .reminder-container_HEIGHT
+//    44 * 2 + .reminder--separator_HEIGHT = .reminder-container_HEIGHT
 //    NOTE: Changing font-size will change .reminder--separator_HEIGHT.
 .reminder--separator {
   display: inline-block;  // [1]
   vertical-align: top;    // [1]
-  padding-top: 30px;      // [1]
-  padding-bottom: 30px;   // [1]
-  font-size: @size-font-medium-large;
+  padding-top: 44px;      // [1]
+  padding-bottom: 44px;   // [1]
 }
