--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -773,6 +773,7 @@ TODO: Example needed
 }
 
 @size-font-reminder: @size-font-content;
+@width-reminder-time: 22px;
 
 // 1. This is the minimun height the widget will use.
 .reminder-container {
@@ -797,29 +798,30 @@ TODO: Example needed
   }
 }
 
-// 1. Align .reminder--up and .reminder--down horizontally with .remider--time and add padding
-// 2. Pad rigth .reminder--time-wrapper by the width of self.
-// 3. Clear.
+// 1. Set minimum possible width for the input - including the caret!
+// 2. Align .reminder--up and .reminder--down horizontally with .remider--time and add padding
+// 3. Pad rigth .reminder--time-wrapper by the width of self.
+// 4. Clear.
 .reminder--time-wrapper {
-  width: 21px;
+  width: @width-reminder-time;  // [1]
   display: inline-block;
   &> * {
     display: block;
   }
   > .reminder--up,
   > .reminder--down {
-      margin-left: -@grid-horizontal / 2; // [1]
-      padding-left: 20px;                 // [1]
-      margin-right: -7px;                 // [1]
+      margin-left: -@grid-horizontal / 2; // [2]
+      padding-left: 20px;                 // [2]
+      margin-right: -7px;                 // [2]
   }
   &~ .reminder--time-wrapper {
-    margin-right: 21px;  // [2]
+    margin-right: @width-reminder-time;  // [3]
     > .reminder--up,
     > .reminder--down {
-      margin-right: 0;  // [3]
-      padding-left: @grid-horizontal / 2; // [1]
-      padding-right: 30px;                // [1]
-      margin-left: -7px;                  // [1]
+      margin-right: 0;  // [4]
+      padding-left: @grid-horizontal / 2; // [2]
+      padding-right: 30px;                // [2]
+      margin-left: -7px;                  // [2]
     }
   }
 }
