--- a/backend/src/main/resources/templates/shareList.html
+++ b/backend/src/main/resources/templates/shareList.html
@@ -14,11 +14,11 @@
       </div>
       <div id="em-description" style="padding-top: 15px;max-width: 375px;margin-left: auto;margin-right: auto;line-height: 28px;">
         <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">
-          <p>find below a link join the list <i>sharedList</i> inviterEmail shared with you</p>
+          <p>find below a link join the list <i>sharedListTitle</i> inviterEmail shared with you</p>
         </h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
-        <a href="inviteLink" style="text-decoration: none;color: white;"><div id="em-button-area" style="padding-top: 7px;padding-bottom: 7px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0f82fe;font-size: 25px;font-weight: 700;"><span style="word-wrap: break-word; -ms-word-break: break-all; word-break: break-all; word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; -ms-hyphens: auto; hyphens: auto;">join list</span></div></a>
+        <a href="acceptLink" style="text-decoration: none;color: white;"><div id="em-button-area" style="padding-top: 7px;padding-bottom: 7px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0f82fe;font-size: 25px;font-weight: 700;"><span style="word-wrap: break-word; -ms-word-break: break-all; word-break: break-all; word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; -ms-hyphens: auto; hyphens: auto;">join list</span></div></a>
       </div>
     </div>
     <div id="em-footer" style="padding-top: 40px;">
