--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -403,25 +403,26 @@ Vertically center .container-master and .container-editor in large screens
 //    between borders.
 //    NOTE: Set left and right AFTER .center-horizontally-absolute.
 // 3. Set height and color
-// NOTE:  Uncomment when taller footer is implemented.
+// 4. By removing the margins from the max width =18px, text inside the toaster is inline with other text
+//    also for >1 column layout
 .container-toaster {
   position: absolute; // [1]
   .center-horizontally-absolute; // [1]
   bottom: 9px;  // [2]
   left: 9px;    // [2]
   right: 9px;   // [2]
-  max-width: @width-column-max; // [1]
+  max-width: (@width-column-max - 18px); // [4]
   height: @grid-vertical; // [3]
   line-height: @grid-vertical; // [3]
   background-color: @color-background-toaster; // [3]
   &.group-mixed {
     .group-mixed--middle {
-      padding-left: 19px; // TODO: comments
+      padding-left: (@grid-horizontal - 9px);
     }
     .group-mixed--right {
-      padding-right: 19px;  // TODO: comments
+      padding-right: (@grid-horizontal - 9px);
       & > .icon-x {
-        padding-right: 0; // TODO: comments
+        padding-right: 0;
         height: 44px;
         line-height: 44px;
         display: block;
