Fixed broken LESS from d02a2014f0033ccc2ea7e9628a9e17d1c2cb4d1e.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -202,7 +202,7 @@ Extended Mind specific UI-components, e.g. welcome/landing page, timeline, sidem
 
 // 1. Align with '.group-heading justified'.
 .datepicker {
-  line-height: @height-heading;
+  line-height: @line-height-heading;
   vertical-align: middle;
   margin-top: @margin-top-heading-justified;  // [1]
   margin-bottom: 4px;                         // [1]
