--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -767,7 +767,7 @@ TODO: Example needed
 .agenda {
   display: block;
   padding-top: 12px;  // [1]
-  .group-mixed.with-checkbox {
+  .group-mixed {
     margin-bottom: -11px; // [2]
     .group-mixed--left {
       min-width: 78px;  // [3]
@@ -785,7 +785,7 @@ TODO: Example needed
 // 1. Make room for text inside .group-mixed--left
 //    NOTE: 'starts' is the longest word in content which needs to fit inside.
 //          Adjust if changed.
-.android .agenda .group-mixed.with-checkbox .group-mixed--left {
+.android .agenda .group-mixed .group-mixed--left {
   min-width: 81px;  // [1]
   width: 81px;      // [1]
 }
