Make blinking text blink fast three times in a 'hey, look at me' type of way

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -634,118 +634,197 @@ input[type="checkbox"]:checked + label:before {
 
 @-webkit-keyframes onboarding-highlighed-pulse {
   0%   { color: @color-text-highlighted; }
-  50% { color: lighten(@color-text-highlighted, 25%); }
+  5% { color: lighten(@color-text-highlighted, 25%); }
+  10%   { color: @color-text-highlighted; }
+  15% { color: lighten(@color-text-highlighted, 25%); }
+  20%   { color: @color-text-highlighted; }
+  25% { color: lighten(@color-text-highlighted, 25%); }
+  30%   { color: @color-text-highlighted; }
   100%   { color: @color-text-highlighted; }
 }
 @-moz-keyframes onboarding-highlighed-pulse {
   0%   { color: @color-text-highlighted; }
-  50% { color: lighten(@color-text-highlighted, 25%); }
+  5% { color: lighten(@color-text-highlighted, 25%); }
+  10%   { color: @color-text-highlighted; }
+  15% { color: lighten(@color-text-highlighted, 25%); }
+  20%   { color: @color-text-highlighted; }
+  25% { color: lighten(@color-text-highlighted, 25%); }
+  30%   { color: @color-text-highlighted; }
   100%   { color: @color-text-highlighted; }
 }
 @-o-keyframes onboarding-highlighed-pulse {
   0%   { color: @color-text-highlighted; }
-  50% { color: lighten(@color-text-highlighted, 25%); }
+  5% { color: lighten(@color-text-highlighted, 25%); }
+  10%   { color: @color-text-highlighted; }
+  15% { color: lighten(@color-text-highlighted, 25%); }
+  20%   { color: @color-text-highlighted; }
+  25% { color: lighten(@color-text-highlighted, 25%); }
+  30%   { color: @color-text-highlighted; }
   100%   { color: @color-text-highlighted; }
 }
 @keyframes onboarding-highlighed-pulse {
   0%   { color: @color-text-highlighted; }
-  50% { color: lighten(@color-text-highlighted, 25%); }
+  5% { color: lighten(@color-text-highlighted, 25%); }
+  10%   { color: @color-text-highlighted; }
+  15% { color: lighten(@color-text-highlighted, 25%); }
+  20%   { color: @color-text-highlighted; }
+  25% { color: lighten(@color-text-highlighted, 25%); }
+  30%   { color: @color-text-highlighted; }
   100%   { color: @color-text-highlighted; }
 }
 
 .onboarding .icon-plus:after {
-  -webkit-animation: onboarding-highlighed-pulse ease-in-out 1.5s infinite;
-  -moz-animation:    onboarding-highlighed-pulse ease-in-out 1.5s infinite;
-  -o-animation:      onboarding-highlighed-pulse ease-in-out 1.5s infinite;
-  animation:         onboarding-highlighed-pulse ease-in-out 1.5s infinite;
+  -webkit-animation: onboarding-highlighed-pulse ease-in-out 3.5s infinite;
+  -moz-animation:    onboarding-highlighed-pulse ease-in-out 3.5s infinite;
+  -o-animation:      onboarding-highlighed-pulse ease-in-out 3.5s infinite;
+  animation:         onboarding-highlighed-pulse ease-in-out 3.5s infinite;
 }
 
 @-webkit-keyframes onboarding-btn-pulse {
   0%   { background-color: @color-background-btn-active; }
-  50% { background-color: darken(@color-background-btn-active, 10%); }
-  100%   { background-color: @color-background-btn-active;; }
+  5% { background-color: darken(@color-background-btn-active, 10%); }
+  10%   { background-color: @color-background-btn-active; }
+  15% { background-color: darken(@color-background-btn-active, 10%); }
+  20%   { background-color: @color-background-btn-active; }
+  25% { background-color: darken(@color-background-btn-active, 10%); }
+  30%   { background-color: @color-background-btn-active; }
+  100%   { background-color: @color-background-btn-active; }
 }
 @-moz-keyframes onboarding-btn-pulse {
   0%   { background-color: @color-background-btn-active; }
-  50% { background-color: darken(@color-background-btn-active, 10%); }
-  100%   { background-color: @color-background-btn-active;; }
+  5% { background-color: darken(@color-background-btn-active, 10%); }
+  10%   { background-color: @color-background-btn-active; }
+  15% { background-color: darken(@color-background-btn-active, 10%); }
+  20%   { background-color: @color-background-btn-active; }
+  25% { background-color: darken(@color-background-btn-active, 10%); }
+  30%   { background-color: @color-background-btn-active; }
+  100%   { background-color: @color-background-btn-active; }
 }
 @-o-keyframes onboarding-btn-pulse {
   0%   { background-color: @color-background-btn-active; }
-  50% { background-color: darken(@color-background-btn-active, 10%); }
-  100%   { background-color: @color-background-btn-active;; }
+  5% { background-color: darken(@color-background-btn-active, 10%); }
+  10%   { background-color: @color-background-btn-active; }
+  15% { background-color: darken(@color-background-btn-active, 10%); }
+  20%   { background-color: @color-background-btn-active; }
+  25% { background-color: darken(@color-background-btn-active, 10%); }
+  30%   { background-color: @color-background-btn-active; }
+  100%   { background-color: @color-background-btn-active; }
 }
 @keyframes onboarding-btn-pulse {
   0%   { background-color: @color-background-btn-active; }
-  50% { background-color: darken(@color-background-btn-active, 10%); }
-  100%   { background-color: @color-background-btn-active;; }
+  5% { background-color: darken(@color-background-btn-active, 10%); }
+  10%   { background-color: @color-background-btn-active; }
+  15% { background-color: darken(@color-background-btn-active, 10%); }
+  20%   { background-color: @color-background-btn-active; }
+  25% { background-color: darken(@color-background-btn-active, 10%); }
+  30%   { background-color: @color-background-btn-active; }
+  100%   { background-color: @color-background-btn-active; }
 }
 
 .onboarding .btn-action .text-btn {
-  -webkit-animation: onboarding-btn-pulse ease-in-out 1.5s infinite;
-  -moz-animation:    onboarding-btn-pulse ease-in-out 1.5s infinite;
-  -o-animation:      onboarding-btn-pulse ease-in-out 1.5s infinite;
-  animation:         onboarding-btn-pulse ease-in-out 1.5s infinite;
+  -webkit-animation: onboarding-btn-pulse ease-in-out 3.5s infinite;
+  -moz-animation:    onboarding-btn-pulse ease-in-out 3.5s infinite;
+  -o-animation:      onboarding-btn-pulse ease-in-out 3.5s infinite;
+  animation:         onboarding-btn-pulse ease-in-out 3.5s infinite;
 }
 
 @-webkit-keyframes onboarding-text-pulse {
   0%   { color: @color-text; }
-  50% { color: lighten(@color-text, 45%); }
+  5% { color: lighten(@color-text, 65%); }
+  10%   { color: @color-text; }
+  15% { color: lighten(@color-text, 65%); }
+  20%   { color: @color-text; }
+  25% { color: lighten(@color-text, 65%); }
+  30%   { color: @color-text; }
   100%   { color: @color-text; }
 }
 @-moz-keyframes onboarding-text-pulse {
   0%   { color: @color-text; }
-  50% { color: lighten(@color-text, 45%); }
+  5% { color: lighten(@color-text, 65%); }
+  10%   { color: @color-text; }
+  15% { color: lighten(@color-text, 65%); }
+  20%   { color: @color-text; }
+  25% { color: lighten(@color-text, 65%); }
+  30%   { color: @color-text; }
   100%   { color: @color-text; }
 }
 @-o-keyframes onboarding-text-pulse {
   0%   { color: @color-text; }
-  50% { color: lighten(@color-text, 45%); }
+  5% { color: lighten(@color-text, 65%); }
+  10%   { color: @color-text; }
+  15% { color: lighten(@color-text, 65%); }
+  20%   { color: @color-text; }
+  25% { color: lighten(@color-text, 65%); }
+  30%   { color: @color-text; }
   100%   { color: @color-text; }
 }
 @keyframes onboarding-text-pulse {
   0%   { color: @color-text; }
-  50% { color: lighten(@color-text, 45%); }
+  5% { color: lighten(@color-text, 65%); }
+  10%   { color: @color-text; }
+  15% { color: lighten(@color-text, 65%); }
+  20%   { color: @color-text; }
+  25% { color: lighten(@color-text, 65%); }
+  30%   { color: @color-text; }
   100%   { color: @color-text; }
 }
 
 .onboarding h2, .onboarding .text-heading, .onboarding .text-heading-primary {
-  -webkit-animation: onboarding-text-pulse ease-in-out 1.5s infinite;
-  -moz-animation:    onboarding-text-pulse ease-in-out 1.5s infinite;
-  -o-animation:      onboarding-text-pulse ease-in-out 1.5s infinite;
-  animation:         onboarding-text-pulse ease-in-out 1.5s infinite;
+  -webkit-animation: onboarding-text-pulse ease-in-out 3.5s infinite;
+  -moz-animation:    onboarding-text-pulse ease-in-out 3.5s infinite;
+  -o-animation:      onboarding-text-pulse ease-in-out 3.5s infinite;
+  animation:         onboarding-text-pulse ease-in-out 3.5s infinite;
 }
 
-
 @-webkit-keyframes onboarding-menu-pulse {
-  0%   { color: @color-text-inverse }
-  50% { color: darken(@color-text-inverse, 45%); }
+  0%   { color: @color-text-inverse; }
+  5% { color: darken(@color-text-inverse, 65%); }
+  10%   { color: @color-text-inverse; }
+  15% { color: darken(@color-text-inverse, 65%); }
+  20%   { color: @color-text-inverse; }
+  25% { color: darken(@color-text-inverse, 65%); }
+  30%   { color: @color-text-inverse; }
   100%   { color: @color-text-inverse; }
 }
 @-moz-keyframes onboarding-menu-pulse {
   0%   { color: @color-text-inverse; }
-  50% { color: darken(@color-text-inverse, 45%); }
+  5% { color: darken(@color-text-inverse, 65%); }
+  10%   { color: @color-text-inverse; }
+  15% { color: darken(@color-text-inverse, 65%); }
+  20%   { color: @color-text-inverse; }
+  25% { color: darken(@color-text-inverse, 65%); }
+  30%   { color: @color-text-inverse; }
   100%   { color: @color-text-inverse; }
 }
 @-o-keyframes onboarding-menu-pulse {
   0%   { color: @color-text-inverse; }
-  50% { color: darken(@color-text-inverse, 45%); }
+  5% { color: darken(@color-text-inverse, 65%); }
+  10%   { color: @color-text-inverse; }
+  15% { color: darken(@color-text-inverse, 65%); }
+  20%   { color: @color-text-inverse; }
+  25% { color: darken(@color-text-inverse, 65%); }
+  30%   { color: @color-text-inverse; }
   100%   { color: @color-text-inverse; }
 }
 @keyframes onboarding-menu-pulse {
   0%   { color: @color-text-inverse; }
-  50% { color: darken(@color-text-inverse, 45%); }
+  5% { color: darken(@color-text-inverse, 65%); }
+  10%   { color: @color-text-inverse; }
+  15% { color: darken(@color-text-inverse, 65%); }
+  20%   { color: @color-text-inverse; }
+  25% { color: darken(@color-text-inverse, 65%); }
+  30%   { color: @color-text-inverse; }
   100%   { color: @color-text-inverse; }
 }
 
 a.link-menu.onboarding:not(.highlighted) span {
-  -webkit-animation: onboarding-menu-pulse ease-in-out 1.5s infinite;
-  -moz-animation:    onboarding-menu-pulse ease-in-out 1.5s infinite;
-  -o-animation:      onboarding-menu-pulse ease-in-out 1.5s infinite;
-  animation:         onboarding-menu-pulse ease-in-out 1.5s infinite;
+  -webkit-animation: onboarding-menu-pulse ease-in-out 3.5s infinite;
+  -moz-animation:    onboarding-menu-pulse ease-in-out 3.5s infinite;
+  -o-animation:      onboarding-menu-pulse ease-in-out 3.5s infinite;
+  animation:         onboarding-menu-pulse ease-in-out 3.5s infinite;
 }
 
-// Bounce acitve and next slide.
+// Bounce active and next slide.
 // From https://coveloping.com/tools/css-animation-generator
 .onboarding .swiper-slide {
   -webkit-animation:  onboarding-slide-bounce 2s ease-in-out 1s 1 both;
