--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -733,7 +733,12 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 // 1. Set height for clickable icon inside .group-mixed--left.
 // 2. Center vertically. Supports single line, multiline and clamped text.
 // 3. Make sure clamped and unclamped span with text inside "a" tag has the same height with display: block.
+// 4. Override for .group-mixed.
 .group-mixed.vertically-centered {
+  .group-mixed--left,
+  .group-mixed--right {
+    vertical-align: middle; // [4]
+  }
   .group-mixed--left {
     & > a > span {
       height: @grid-vertical; // [1]
@@ -746,9 +751,6 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
     & > [class*=" text-"] {
       display: block; // [3]
     }
-  }
-  .group-mixed--right {
-    vertical-align: middle;
   }
 }
 
